--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^4.4.1",
     "babel-plugin-react-compiler": "^1.0.0",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.552.0",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
